--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,90 @@
 .App {
   text-align: center;
+background: #4d6097;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  
+  height: 40vh;
   display: flex;
+  background-image: url('https://images.unsplash.com/photo-1420161900862-9a86fa1f5c79?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80');
+border-bottom: 4px solid #FFD966;;
+}
+.name{
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 40%;
+  
+  font-family: serif;
+}
+.name h1{
+  width: 60%;
+  color :#FFD966;
+  font-size: 70px;
+  margin: 10px;
+}
+.name h2{
+  width: 70%;
+  color :#FFD966;
+  font-size: 33px;
+}
+.conta{
+  width: 100%;
+  display: flex;
+}
+main{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  flex-wrap:wrap ;
+}
+.images{
+  margin: 40px;
+  
+  
+}
+.images img {
+  width: 23%;
+  margin: 10px;
+  border-radius: 20px;
+  box-shadow: 0 0 25px #FFD966;
+}
+.problem{
+  width: 60%;
+  display: flex;
+  margin: 20px;
+  align-items: center;
+
+  padding: 100px;
+}
+.problem h1{
+  font-family: serif;
+  color:#FFD966;
+}
+li{
+  list-style: none;
+}
+.problem p ,ul{
+  
+  width: 100%;
+  padding: 40px;
+  margin: 20px;
+  font-size: 25px;
+  border-radius: 20px;
+  box-shadow: 0 0 15px;
+  font-family: serif;
+  color:#FFD966;
+}
+.images_de{
+  width: 100% ;
 }
 
-.App-link {
-  color: #61dafb;
-}
+
+
+
 
 @keyframes App-logo-spin {
   from {
